@@ -144,10 +144,10 @@ const INTERMediatorLib = {
       saltHex += numToHex[highCode] + numToHex[lowCode]
     }
     let shaObj = null
-    if (INTERMediatorOnPage.passwordHash < 1.1) {
-      shaObj = new jsSHA('SHA-1', 'TEXT')
-    } else {
+    if (INTERMediatorOnPage.passwordHash > 1.4 || INTERMediatorOnPage.alwaysGenSHA2) {
       shaObj = new jsSHA('SHA-256', 'TEXT')
+    } else {
+      shaObj = new jsSHA('SHA-1', 'TEXT')
     }
     shaObj.update(password + salt)
     let hash = shaObj.getHash('HEX')
