@@ -11,6 +11,8 @@ Also the Migration Guide (Japanese) might be informative:
   http://inter-mediator.info/ja/for-developers/migration.html
 
 Ver.8 (in development)
+- The password hash for authentication moves to SHA-256 based hash, and it has the interoperability with SHA-1 hash.
+  (LDAP and self-service password reset are not checked so far.)
 - [BUG FIX] IMLibPageNavigation.moveDetailOnceAgain() didn't work fine.
 - [BUG FIX] On the navi-control key, confirm-delete works but delete-confirm didn't (also insert).
 
